# MyCRM

./: .editorconfig  .env.example  .gitignore  PROJECT_FILE_MAP.md  README.md  compose.yaml  render.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_initial.py  20260715_0002_workspace_foundation.py  20260715_0003_authentication.py  20260715_0004_contacts_companies.py  20260715_0005_align_model_constraints.py  20260715_0006_pipelines_deals.py  20260715_0007_tasks_activities_notes.py  20260718_0008_stage_commands_audit.py
backend/src/mycrm/: __init__.py  api.py  main.py
backend/src/mycrm/core/: config.py  database.py  errors.py  logging.py  middleware.py
backend/src/mycrm/modules/: __init__.py  crm_relations.py  crm_shared.py
backend/src/mycrm/modules/activities/: api.py  application.py  models.py
backend/src/mycrm/modules/audit/: api.py  application.py  models.py
backend/src/mycrm/modules/companies/: __init__.py  api.py  application.py  models.py
backend/src/mycrm/modules/contacts/: __init__.py  api.py  application.py  models.py
backend/src/mycrm/modules/deals/: __init__.py  api.py  application.py  models.py
backend/src/mycrm/modules/health/: __init__.py  api.py
backend/tests/: test_config.py  test_health.py  test_identity_security.py  test_public_safety.py
backend/tests/integration/: __init__.py  conftest.py  test_auth_workspace.py  test_contacts_companies.py  test_pipelines_deals.py  test_stage_commands_audit.py  test_tasks_activities_notes.py
(+42 files in other folders)
